--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JDM Cars - Home</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <div class="background-container">
-        <img src="../images/banner_image.jpg" alt="Background Image" class="background-image">
+        <img src="images/banner_image.jpg" alt="Background Image" class="background-image">
         <div class="overlay">
             <div class="home-page-text">
             <h1>Welcome to JDM Cars</h1>
