--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JDM Cars - Cars</title>
+    <title>JDM Cars - Contact</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
@@ -11,7 +11,7 @@
     <header>
         <div class="header-overlay"></div>
         <div class="header-content">
-        <h1 class ="header-title">JDM Cars</h1>
+        <h1 class ="header-title">About</h1>
         <div class="search-bar">
             <input type="text" id="search-input" placeholder="Search for products...">
             <button id="search-button"><i class="fas fa-search"></i></button>
@@ -31,22 +31,28 @@
         </nav>
     </header>
     <main>
-        <div class="car-list">
-            <div class="body-header">
-            <span class="dropdown-label">Cars</span>
-            <div class="sort-dropdown">
-                <select id="sort-by">
-                    <option value="price-low-to-high">Price: Low to High</option>
-                    <option value="price-high-to-low">Price: High to Low</option>
-                    <option value="mileage-low-to-high">Mileage: Low to High</option>
-                    <option value="mileage-high-to-low">Mileage: High to Low</option>
-                </select>
+        <section class="about-section">
+            <div class="about-content">
+                <h2>About Us</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec ex eu nibh fermentum consequat.</p>
             </div>
-            </div>
-        <section id="product-listings">
-            <!-- Product listings will be dynamically generated here -->
         </section>
-    </div>
+        <section class="team-section">
+            <div class="team-content">
+                <h2>Our Team</h2>
+                <div class="team-member">
+                    <img src="images/team-member1.jpg" alt="Team Member 1">
+                    <h3>John Doe</h3>
+                    <p>Position: CEO</p>
+                </div>
+                <div class="team-member">
+                    <img src="images/team-member2.jpg" alt="Team Member 2">
+                    <h3>Jane Smith</h3>
+                    <p>Position: Marketing Manager</p>
+                </div>
+                <!-- Add more team members as needed -->
+            </div>
+        </section>
     </main>
     <footer>
         <div class="footer-overlay"></div>
