--- a/checkout.html
+++ b/checkout.html
@@ -13,7 +13,7 @@
         <div class="header-content">
         <h1 class ="header-title">Checkout</h1>
         <body>
-            <i class="fas fa-user icon" id="account-icon"></i>
+            <i class="fas fa-user icon" id="account-icon" onclick="redirectToAccountPage()"></i>
             <i class="fas fa-shopping-cart icon" id="cart-icon" onclick="redirectToCheckout()" onmouseover="showCartDropdown()" onmouseout="hideCartDropdown()"></i>
         <div class="cart-dropdown" id="cartDropdown"></div>
        </div>
