--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
             <button id="search-button"><i class="fas fa-search"></i></button>
         </div>
         <body>
-            <i class="fas fa-user icon" id="account-icon"></i>
+            <i class="fas fa-user icon" id="account-icon" onclick="redirectToAccountPage()"></i>
             <i class="fas fa-shopping-cart icon" id="cart-icon" onclick="redirectToCheckout()" onmouseover="showCartDropdown()" onmouseout="hideCartDropdown()"></i>
         <div class="cart-dropdown" id="cartDropdown"></div>
        </div>
