--- a/product.html
+++ b/product.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JDM Cars - Cars</title>
+    <title>JDM Cars - Contact</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
@@ -11,10 +11,9 @@
     <header>
         <div class="header-overlay"></div>
         <div class="header-content">
-        <h1 class ="header-title">JDM Cars</h1>
+        <h1 class ="header-title">Contact Us</h1>
         <div class="search-bar">
             <input type="text" id="search-input" placeholder="Search for products...">
-            <div id="search-results" class="search-results"></div> <!-- Container for search results -->
             <button id="search-button"><i class="fas fa-search"></i></button>
         </div>
         <body>
@@ -32,21 +31,13 @@
         </nav>
     </header>
     <main>
-        <div class="car-list">
-            <div class="body-header">
-            <span class="dropdown-label">Cars</span>
-            <div class="sort-dropdown">
-                <select id="sort-by">
-                    <option value="price-low-to-high">Price: Low to High</option>
-                    <option value="price-high-to-low">Price: High to Low</option>
-                    <option value="mileage-low-to-high">Mileage: Low to High</option>
-                    <option value="mileage-high-to-low">Mileage: High to Low</option>
-                </select>
+        <div class="product-details">
+            <div id="product-image" class="product-image">
             </div>
+            <div class="product-info">
+            <h1 id="product-name"></h1>
+            <p id="product-description"></p>
             </div>
-        <section id="product-listings">
-            <!-- Product listings will be dynamically generated here -->
-        </section>
         </div>
     </main>
     <footer>
