--- a/product.html
+++ b/product.html
@@ -43,6 +43,30 @@
     <footer>
         <div class="footer-overlay"></div>
         <div class="footer-content">
+            <div class="footer-section contact-info">
+            <h3>Contact Us</h3>
+            <p>123 Main Street, City, Country</p>
+            <p>Email: info@example.com</p>
+            <p>Phone: +123 456 789</p>
+        </div>
+        <div class="footer-section quick-links">
+            <h3>Quick Links</h3>
+            <ul>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Products</a></li>
+                <li><a href="#">FAQs</a></li>
+            </ul>
+        </div>
+        <div class="footer-section social-media">
+            <h3>Follow Us</h3>
+            <ul>
+                <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
+            </ul>
+        </div>
         <p>&copy; 2024 JDM Cars. Azhar Rashid.</p>
     </div>
     </footer>
