--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JDM Cars - Contact</title>
+    <title>About</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
@@ -14,7 +14,6 @@
         <h1 class ="header-title">About</h1>
         <div class="search-bar">
             <input type="text" id="search-input" placeholder="Search for products...">
-            <button id="search-button"><i class="fas fa-search"></i></button>
         </div>
         <body>
             <i class="fas fa-user icon" id="account-icon" onclick="redirectToAccountPage()"></i>
@@ -31,32 +30,30 @@
         </nav>
     </header>
     <main>
+        <div class="fade-animation">
         <section class="about-section">
             <div class="about-content">
                 <h2>About Us</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec ex eu nibh fermentum consequat.</p>
+                <p>Welcome to JDM Cars, your ultimate destination for enthusiasts of Japanese Domestic Market (JDM) vehicles. At JDM Cars, we are passionate about bringing the thrill of authentic JDM automobiles to enthusiasts around the world. <br><br> Our mission is to curate a comprehensive collection of JDM vehicles, parts, and accessories, providing enthusiasts with access to the iconic cars they love. From legendary classics to cutting-edge imports, we celebrate the rich heritage and innovation of the JDM automotive culture. <br><br> Driven by our dedication to quality and authenticity, we strive to deliver exceptional customer service and a seamless shopping experience. Whether you're a seasoned collector, a performance enthusiast, or simply appreciate the artistry of JDM engineering, we invite you to explore our collection and join us in celebrating the spirit of JDM.      </div>
+        </section>
+        <section class="commitment-section">
+            <div class="commitment-section">
+                <h2>Our Commitment</h2>
+                <p>At JDM Cars, our commitment extends beyond providing top-quality products. We are dedicated to fostering a community of passionate enthusiasts who share our love for JDM automobiles. With a focus on customer satisfaction and community engagement, we strive to create an inclusive and welcoming environment where enthusiasts can connect, learn, and celebrate their shared passion for Japanese Domestic Market vehicles</p>
+                <img src="images/garage1.jpg" alt="Garage1">
+                <img src="images/garage2.jpg" alt="Garage2">
+                <img src="images/garage3.jpg" alt="Garage3">
+                <img src="images/garage4.jpg" alt="Garage4">
+                <img src="images/garage5.jpg" alt="Garage5">
+                <img src="images/garage6.jpg" alt="Garage6">
             </div>
         </section>
-        <section class="team-section">
-            <div class="team-content">
-                <h2>Our Team</h2>
-                <div class="team-member">
-                    <img src="images/team-member1.jpg" alt="Team Member 1">
-                    <h3>John Doe</h3>
-                    <p>Position: CEO</p>
-                </div>
-                <div class="team-member">
-                    <img src="images/team-member2.jpg" alt="Team Member 2">
-                    <h3>Jane Smith</h3>
-                    <p>Position: Marketing Manager</p>
-                </div>
-                <!-- Add more team members as needed -->
-            </div>
-        </section>
+        </div>
     </main>
     <footer>
         <div class="footer-overlay"></div>
         <div class="footer-content">
+        <div class="footer-sections-container">
             <div class="footer-section contact-info">
             <h3>Contact Us</h3>
             <p>123 Main Street, City, Country</p>
@@ -67,9 +64,19 @@
             <h3>Quick Links</h3>
             <ul>
                 <li><a href="#">About Us</a></li>
-                <li><a href="#">Services</a></li>
                 <li><a href="#">Products</a></li>
+                <li><a href="#">Cookies</a></li>
+                <li><a href="#">Terms & Conditions</a></li>
                 <li><a href="#">FAQs</a></li>
+            </ul>
+        </div>
+        <div class="footer-section customer-service">
+            <h3>Customer Service</h3>
+            <ul>
+                <li><a href="#">Help</a></li>
+                <li><a href="#">Deliveries</a></li>
+                <li><a href="#">Where is my order?</a></li>
+                <li><a href="#">Returns information </a></li>
             </ul>
         </div>
         <div class="footer-section social-media">
@@ -81,6 +88,22 @@
                 <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
             </ul>
         </div>
+    </div>
+    <div class="footer-sections-container-2">
+        <div class="footer-section app-store">
+            <h3>Download Our App</h3>
+            <a href="#"><img src="images/app-store-icon.png" alt="App Store"></a>
+        </div>
+        <div class="footer-section payment-methods">
+            <div class="payment-icon-container">
+            <i class="fab fa-cc-visa fa-2x"></i>
+            <i class="fab fa-cc-mastercard fa-2x"></i>
+            <i class="fab fa-cc-amex fa-2x"></i>
+            <i class="fab fa-cc-paypal fa-2x"></i>
+            <i class="fab fa-cc-apple-pay fa-2x"></i>
+        </div>
+        </div>
+    </div>
         <p>&copy; 2024 JDM Cars. Azhar Rashid.</p>
     </div>
     </footer>
