--- a/cars.html
+++ b/cars.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JDM Cars - Cars</title>
+    <title>Cars</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
@@ -31,7 +31,7 @@
         </nav>
     </header>
     <main>
-        <div class="car-list">
+        <div class="fade-animation">
             <div class="body-header">
             <span class="dropdown-label">Cars</span>
             <div class="sort-dropdown">
@@ -94,11 +94,11 @@
         </div>
         <div class="footer-section payment-methods">
             <div class="payment-icon-container">
-            <i class="fab fa-cc-visa fa-3x"></i>
-            <i class="fab fa-cc-mastercard fa-3x"></i>
-            <i class="fab fa-cc-amex fa-3x"></i>
-            <i class="fab fa-cc-paypal fa-3x"></i>
-            <i class="fab fa-cc-apple-pay fa-3x"></i>
+            <i class="fab fa-cc-visa fa-2x"></i>
+            <i class="fab fa-cc-mastercard fa-2x"></i>
+            <i class="fab fa-cc-amex fa-2x"></i>
+            <i class="fab fa-cc-paypal fa-2x"></i>
+            <i class="fab fa-cc-apple-pay fa-2x"></i>
         </div>
         </div>
     </div>
