--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JDM Cars - Contact</title>
+    <title>Contact</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
@@ -14,7 +14,6 @@
         <h1 class ="header-title">Contact Us</h1>
         <div class="search-bar">
             <input type="text" id="search-input" placeholder="Search for products...">
-            <button id="search-button"><i class="fas fa-search"></i></button>
         </div>
         <body>
             <i class="fas fa-user icon" id="account-icon" onclick="redirectToAccountPage()"></i>
@@ -31,6 +30,7 @@
         </nav>
     </header>
     <main>
+        <div class="fade-animation">
         <section id="contact-form">
             <h2>Get in Touch</h2>
             <form action="submit_form.php" method="post">
@@ -46,10 +46,12 @@
                 <button type="submit">Submit</button>
             </form>
         </section>
+        </div>
     </main>
     <footer>
         <div class="footer-overlay"></div>
         <div class="footer-content">
+        <div class="footer-sections-container">
             <div class="footer-section contact-info">
             <h3>Contact Us</h3>
             <p>123 Main Street, City, Country</p>
@@ -60,9 +62,19 @@
             <h3>Quick Links</h3>
             <ul>
                 <li><a href="#">About Us</a></li>
-                <li><a href="#">Services</a></li>
                 <li><a href="#">Products</a></li>
+                <li><a href="#">Cookies</a></li>
+                <li><a href="#">Terms & Conditions</a></li>
                 <li><a href="#">FAQs</a></li>
+            </ul>
+        </div>
+        <div class="footer-section customer-service">
+            <h3>Customer Service</h3>
+            <ul>
+                <li><a href="#">Help</a></li>
+                <li><a href="#">Deliveries</a></li>
+                <li><a href="#">Where is my order?</a></li>
+                <li><a href="#">Returns information </a></li>
             </ul>
         </div>
         <div class="footer-section social-media">
@@ -74,6 +86,22 @@
                 <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
             </ul>
         </div>
+    </div>
+    <div class="footer-sections-container-2">
+        <div class="footer-section app-store">
+            <h3>Download Our App</h3>
+            <a href="#"><img src="images/app-store-icon.png" alt="App Store"></a>
+        </div>
+        <div class="footer-section payment-methods">
+            <div class="payment-icon-container">
+            <i class="fab fa-cc-visa fa-2x"></i>
+            <i class="fab fa-cc-mastercard fa-2x"></i>
+            <i class="fab fa-cc-amex fa-2x"></i>
+            <i class="fab fa-cc-paypal fa-2x"></i>
+            <i class="fab fa-cc-apple-pay fa-2x"></i>
+        </div>
+        </div>
+    </div>
         <p>&copy; 2024 JDM Cars. Azhar Rashid.</p>
     </div>
     </footer>
