--- a/product.html
+++ b/product.html
@@ -11,14 +11,13 @@
     <header>
         <div class="header-overlay"></div>
         <div class="header-content">
-        <h1 class ="header-title">Contact Us</h1>
+        <h1 class ="header-title">JDM Cars</h1>
         <div class="search-bar">
             <input type="text" id="search-input" placeholder="Search for products...">
         </div>
         <body>
             <i class="fas fa-user icon" id="account-icon" onclick="redirectToAccountPage()"></i>
-            <i class="fas fa-shopping-cart icon" id="cart-icon" onclick="redirectToCheckout()" onmouseover="showCartDropdown()" onmouseout="hideCartDropdown()"></i>
-        <div class="cart-dropdown" id="cartDropdown"></div>
+            <i class="fas fa-shopping-cart icon" id="cart-icon" onclick="redirectToCheckout()"></i>
        </div>
         <nav>
             <ul>
@@ -86,13 +85,11 @@
             <a href="#"><img src="images/app-store-icon.png" alt="App Store"></a>
         </div>
         <div class="footer-section payment-methods">
-            <div class="payment-icon-container">
             <i class="fab fa-cc-visa fa-2x"></i>
             <i class="fab fa-cc-mastercard fa-2x"></i>
             <i class="fab fa-cc-amex fa-2x"></i>
             <i class="fab fa-cc-paypal fa-2x"></i>
             <i class="fab fa-cc-apple-pay fa-2x"></i>
-        </div>
         </div>
     </div>
         <p>&copy; 2024 JDM Cars. Azhar Rashid.</p>
