--- a/about.html
+++ b/about.html
@@ -11,14 +11,13 @@
     <header>
         <div class="header-overlay"></div>
         <div class="header-content">
-        <h1 class ="header-title">About</h1>
+        <h1 class ="header-title">JDM Cars</h1>
         <div class="search-bar">
             <input type="text" id="search-input" placeholder="Search for products...">
         </div>
         <body>
             <i class="fas fa-user icon" id="account-icon" onclick="redirectToAccountPage()"></i>
-            <i class="fas fa-shopping-cart icon" id="cart-icon" onclick="redirectToCheckout()" onmouseover="showCartDropdown()" onmouseout="hideCartDropdown()"></i>
-        <div class="cart-dropdown" id="cartDropdown"></div>
+            <i class="fas fa-shopping-cart icon" id="cart-icon" onclick="redirectToCheckout()"></i>
        </div>
         <nav>
             <ul>
@@ -38,11 +37,11 @@
         </section>
         <section class="commitment-section">
             <div class="commitment-section">
-                <h2>Our Commitment</h2>
-                <p>At JDM Cars, our commitment extends beyond providing top-quality products. We are dedicated to fostering a community of passionate enthusiasts who share our love for JDM automobiles. With a focus on customer satisfaction and community engagement, we strive to create an inclusive and welcoming environment where enthusiasts can connect, learn, and celebrate their shared passion for Japanese Domestic Market vehicles</p>
                 <img src="images/garage1.jpg" alt="Garage1">
                 <img src="images/garage2.jpg" alt="Garage2">
                 <img src="images/garage3.jpg" alt="Garage3">
+                <h2>Our Commitment</h2>
+                <p>At JDM Cars, our commitment extends beyond providing top-quality products. We are dedicated to fostering a community of passionate enthusiasts who share our love for JDM automobiles. With a focus on customer satisfaction and community engagement, we strive to create an inclusive and welcoming environment where enthusiasts can connect, learn, and celebrate their shared passion for Japanese Domestic Market vehicles</p>
                 <img src="images/garage4.jpg" alt="Garage4">
                 <img src="images/garage5.jpg" alt="Garage5">
                 <img src="images/garage6.jpg" alt="Garage6">
@@ -95,13 +94,11 @@
             <a href="#"><img src="images/app-store-icon.png" alt="App Store"></a>
         </div>
         <div class="footer-section payment-methods">
-            <div class="payment-icon-container">
             <i class="fab fa-cc-visa fa-2x"></i>
             <i class="fab fa-cc-mastercard fa-2x"></i>
             <i class="fab fa-cc-amex fa-2x"></i>
             <i class="fab fa-cc-paypal fa-2x"></i>
             <i class="fab fa-cc-apple-pay fa-2x"></i>
-        </div>
         </div>
     </div>
         <p>&copy; 2024 JDM Cars. Azhar Rashid.</p>
