--- a/cars.html
+++ b/cars.html
@@ -18,8 +18,7 @@
         </div>
         <body>
             <i class="fas fa-user icon" id="account-icon" onclick="redirectToAccountPage()"></i>
-            <i class="fas fa-shopping-cart icon" id="cart-icon" onclick="redirectToCheckout()" onmouseover="showCartDropdown()" onmouseout="hideCartDropdown()"></i>
-        <div class="cart-dropdown" id="cartDropdown"></div>
+            <i class="fas fa-shopping-cart icon" id="cart-icon" onclick="redirectToCheckout()"></i>
        </div>
         <nav>
             <ul>
@@ -93,13 +92,11 @@
             <a href="#"><img src="images/app-store-icon.png" alt="App Store"></a>
         </div>
         <div class="footer-section payment-methods">
-            <div class="payment-icon-container">
             <i class="fab fa-cc-visa fa-2x"></i>
             <i class="fab fa-cc-mastercard fa-2x"></i>
             <i class="fab fa-cc-amex fa-2x"></i>
             <i class="fab fa-cc-paypal fa-2x"></i>
             <i class="fab fa-cc-apple-pay fa-2x"></i>
-        </div>
         </div>
     </div>
         <p>&copy; 2024 JDM Cars. Azhar Rashid.</p>
