--- a/checkout.html
+++ b/checkout.html
@@ -90,13 +90,13 @@
         <div class="address-info">
             <h2>Delivery Address</h2>
             <label for="address">Address Line 1 *</label>
-            <input type="text" id="address" name="address" required>
+            <input placeholder="Address Line 1" type="text" id="address" name="address" required>
             <label for="address2">Address Line 2 *</label>
-            <input type="email" id="address2" name="address2" required>
+            <input placeholder="Address Line 2" type="email" id="address2" name="address2" required>
             <label for="city">Town / City *</label>
-            <input type="text" id="city" name="city" required>
+            <input placeholder="City" type="text" id="city" name="city" required>
             <label for="postcode">Postcode / ZIP *</label>
-            <input type="text" id="postcode" name="postcode" required>
+            <input placeholder="AAA BBB" type="text" id="postcode" name="postcode" required>
         </div>
             <div class="checkout-buttons">
                 <button type="submit">Complete Purchase</button>
