--- a/contact.html
+++ b/contact.html
@@ -47,12 +47,12 @@
             </div>
         <section id="contact-form">
             <h2>Send Us A Message</h2>
-            <form action="submit_form.php" method="post">
+            <form>
                 <label for="name">Name * </label>
                 <input placeholder="Full Name" type="text" id="name" name="name" required><br><br>
                 <label for="email">Email *</label>
                 <input placeholder="Eg. example@mail.com" type="email" id="email" name="email" required><br><br> 
-                <label for="message">Message *</label><br>
+                <label for="name">Message *</label><br>
                 <textarea placeholder="Write Us A Message" id="message" name="message" rows="4" cols="50" required></textarea><br><br>
                 <button type="submit">Send Message</button>
             </form>
