--- a/account.html
+++ b/account.html
@@ -45,7 +45,7 @@
                 <button type="submit" class="account-form-submit" >Sign Up</button>
             </form>
             <div class="toggle-form">
-                <p>New to JDM Cars? <a href="#" onclick="toggleForm()">Sign up here</a></p>
+                <p><a href="#" onclick="toggleForm()">New to JDM Cars? Sign up here</a></p>
             </div>
         </div>
         </div>
