--- a/cars.html
+++ b/cars.html
@@ -11,7 +11,7 @@
     <header>
         <div class="header-overlay"></div>
         <div class="header-content">
-        <h1 class ="header-title">JDM Cars</h1>
+        <img src="images/logo.png" class ="header-logo">
         <div class="search-bar">
             <input type="text" id="search-input" placeholder="Search for products...">
             <div id="search-results" class="search-results"></div> <!-- Container for search results -->
