--- a/checkout.html
+++ b/checkout.html
@@ -11,7 +11,7 @@
     <header>
         <div class="header-overlay"></div>
         <div class="header-content">
-        <h1 class ="header-title">JDM Cars</h1>
+        <img src="images/logo.png" class ="header-logo">
         <body>
             <i class="fas fa-user icon" id="account-icon" onclick="redirectToAccountPage()"></i>
             <i class="fas fa-shopping-cart icon" id="cart-icon" onclick="redirectToCheckout()"></i>
