--- a/contact.html
+++ b/contact.html
@@ -55,6 +55,9 @@
                 <label for="name">Message *</label><br>
                 <textarea placeholder="Write Us A Message" id="message" name="message" rows="4" cols="50" required></textarea><br><br>
                 <button type="submit">Send Message</button>
+                <div>
+                    <p id="result-text"></p>
+                </div>
             </form>
         </section>
         </div>
