--- a/checkout.html
+++ b/checkout.html
@@ -54,54 +54,57 @@
             <img src="images/apple-pay.png" alt="Apple Pay">
             <p>or</p>
         </div>
-        <form action="confirm.html" method="post" class="checkout-form">
-        <div class="checkout-section">
-            <div class="contact-info">
-                <h2>Contact Details</h2>
-                <label for="name">Full Name *</label>
-                <input placeholder="Full Name" type="text" id="full-name" name="full-name" required>
-                <label for="email">Email *</label>
-                <input placeholder="Eg. example@mail.com" type="email" id="email" name="email" required>
-                <label for="phone">Mobile Number *</label>
-                <input placeholder="Eg. +1 800 000000" type="text" id="mobile-number" name="mobile-number" required>
-           </div>
-            <div class="card-details">
-                <h2>Card Details</h2>
-                <label for="card-name">Name on Card *</label>
-                <input placeholder="Eg. Mr. John Doe" type="text" id="card-name" name="card-name" required>
-                <label for="card-number">Card Number * 
-                    <i class="fab fa-cc-visa fa-lg"></i>
-                    <i class="fab fa-cc-mastercard fa-lg"></i>
-                    <i class="fab fa-cc-amex fa-lg"></i>
-                </label>
-                <input placeholder="0000 0000 0000" type="text" id="card-number" name="card-number" required>
-                <div class="cvv-expiry">
-                    <div class="input-row">
-                        <label for="expiry-date">Expiry Date *</label>
-                        <input placeholder="MM/YY" type="text" id="expiry-date" name="expiry-date" required>
-                    </div>
-                    <div class="input-row">
-                        <label for="cvv">CVV *</label>
-                        <input placeholder="***" type="text" id="cvv" name="cvv" required>
+        <form id="checkout-form" class="checkout-form">
+            <div class="checkout-section">
+                <div class="contact-info">
+                    <h2>Contact Details</h2>
+                    <label for="name">Full Name *</label>
+                    <input placeholder="Full Name" type="text" id="name" name="name" required>
+                    <label for="email">Email *</label>
+                    <input placeholder="Eg. example@mail.com" type="email" id="email" name="email" required>
+                    <label for="phone">Mobile Number *</label>
+                    <input placeholder="Eg. +1 800 000000" type="text" id="number" name="number" required>
+               </div>
+                <div class="card-details">
+                    <h2>Card Details</h2>
+                    <label for="card-name">Name on Card *</label>
+                    <input placeholder="Eg. Mr. John Doe" type="text" id="card-name" name="card-name" required>
+                    <label for="card-number">Card Number * 
+                        <i class="fab fa-cc-visa fa-lg"></i>
+                        <i class="fab fa-cc-mastercard fa-lg"></i>
+                        <i class="fab fa-cc-amex fa-lg"></i>
+                    </label>
+                    <input placeholder="0000 0000 0000" type="text" id="card-number" name="card-number" required>
+                    <div class="cvv-expiry">
+                        <div class="input-row">
+                            <label for="expiry-date">Expiry Date *</label>
+                            <input placeholder="MM/YY" type="text" id="expiry-date" name="expiry-date" required>
+                        </div>
+                        <div class="input-row">
+                            <label for="cvv">CVV *</label>
+                            <input placeholder="***" type="text" id="cvv" name="cvv" required>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="address-info">
-            <h2>Delivery Address</h2>
-            <label for="address">Address Line 1 *</label>
-            <input placeholder="Address Line 1" type="text" id="address" name="address" required>
-            <label for="address2">Address Line 2 *</label>
-            <input placeholder="Address Line 2" type="email" id="address2" name="address2" required>
-            <label for="city">Town / City *</label>
-            <input placeholder="City" type="text" id="city" name="city" required>
-            <label for="postcode">Postcode / ZIP *</label>
-            <input placeholder="AAA BBB" type="text" id="postcode" name="postcode" required>
-        </div>
-            <div class="checkout-buttons">
-                <button type="submit">Complete Purchase</button>
+            <div class="address-info">
+                <h2>Delivery Address</h2>
+                <label for="address">Address Line 1 *</label>
+                <input placeholder="Address Line 1" type="text" id="address" name="address" required>
+                <label for="address2">Address Line 2 *</label>
+                <input placeholder="Address Line 2" type="text" id="address2" name="address2" required>
+                <label for="city">Town / City *</label>
+                <input placeholder="City" type="text" id="city" name="city" required>
+                <label for="postcode">Postcode / ZIP *</label>
+                <input placeholder="AAA BBB" type="text" id="postcode" name="postcode" required>
             </div>
-        </form>
+                <div class="checkout-buttons">
+                    <button type="submit">Complete Purchase</button>
+                </div>
+                <div>
+                    <p id="result-text"></p>
+                </div>
+            </form>
         </div>
         </div>
     </main>
