--- a/account.html
+++ b/account.html
@@ -10,17 +10,9 @@
 <body>
     <header>
         <div class="header-overlay"></div>
-        <div class="header-content">
-        <img src="images/logo.png" class ="header-logo">
+        <div class="header-content2">
+            <a href="index.html"><img src="images/logo.png" class ="header-logo2"></a>
         </div>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="cars.html">Cars</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
     </header>
     <main>
         <div class="fade-animation">
