--- a/contact.html
+++ b/contact.html
@@ -11,9 +11,10 @@
     <header>
         <div class="header-overlay"></div>
         <div class="header-content">
-        <img src="images/logo.png" class ="header-logo">
+        <a href="index.html"><img src="images/logo.png" class ="header-logo"></a>
         <div class="search-bar">
             <input type="text" id="search-input" placeholder="Search for products...">
+            <div id="search-results" class="search-results"></div>
         </div>
         <body>
             <i class="fas fa-user icon" id="account-icon" onclick="redirectToAccountPage()"></i>
@@ -21,7 +22,7 @@
        </div>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="cars.html">Cars</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -42,7 +43,7 @@
                 </div>
                 <div class="email">
                     <h3><i class="far fa-envelope"></i> Email</h3>
-                    <p>info@example.com</p>
+                    <p>jdmcarscontact11@gmail.com</p>
                 </div>
             </div>
         <section id="contact-form">
