--- a/cars.html
+++ b/cars.html
@@ -11,7 +11,7 @@
     <header>
         <div class="header-overlay"></div>
         <div class="header-content">
-        <img src="images/logo.png" class ="header-logo">
+        <a href="index.html"><img src="images/logo.png" class ="header-logo"></a>
         <div class="search-bar">
             <input type="text" id="search-input" placeholder="Search for products...">
             <div id="search-results" class="search-results"></div> <!-- Container for search results -->
@@ -22,7 +22,7 @@
        </div>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="cars.html">Cars</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
