--- a/checkout.html
+++ b/checkout.html
@@ -11,14 +11,14 @@
     <header>
         <div class="header-overlay"></div>
         <div class="header-content">
-        <img src="images/logo.png" class ="header-logo">
+        <a href="index.html"><img src="images/logo.png" class ="header-logo"></a>
         <body>
             <i class="fas fa-user icon" id="account-icon" onclick="redirectToAccountPage()"></i>
             <i class="fas fa-shopping-cart icon" id="cart-icon" onclick="redirectToCheckout()"></i>
        </div>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="cars.html">Cars</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
