--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JDM Cars - Contact</title>
+    <title>Home</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
@@ -14,7 +14,7 @@
         <a href="index.html"><img src="images/logo.png" class ="header-logo"></a>
         <div class="search-bar">
             <input type="text" id="search-input" placeholder="Search for products...">
-            <div id="search-results" class="search-results"></div>
+            <div id="search-results" class="search-results"></div> <!-- Container for search results -->
         </div>
         <body>
             <i class="fas fa-user icon" id="account-icon" onclick="redirectToAccountPage()"></i>
@@ -30,16 +30,8 @@
         </nav>
     </header>
     <main>
-        <div class="fade-animation">
-        <div class="product-details">
-            <div id="product-image" class="product-image">
-            </div>
-            <div class="product-info">
-            <h1 id="product-name"></h1>
-            <p id="product-description"></p>
-            </div>
-        </div>
-        </div>
+
+
     </main>
     <footer>
         <div class="footer-overlay"></div>
