--- a/checkout.html
+++ b/checkout.html
@@ -12,6 +12,10 @@
         <div class="header-overlay"></div>
         <div class="header-content">
         <a href="index.html"><img src="images/logo.png" class ="header-logo"></a>
+        <div class="search-bar">
+            <input type="text" id="search-input" placeholder="Search for products...">
+            <div id="search-results" class="search-results"></div>
+        </div>
         <body>
             <i class="fas fa-user icon" id="account-icon" onclick="redirectToAccountPage()"></i>
             <i class="fas fa-shopping-cart icon" id="cart-icon" onclick="redirectToCheckout()"></i>
@@ -112,11 +116,14 @@
         <div class="footer-overlay"></div>
         <div class="footer-content">
         <div class="footer-sections-container">
-            <div class="footer-section contact-info">
-            <h3>Contact Us</h3>
-            <p>123 Main Street, City, Country</p>
-            <p>Email: info@example.com</p>
-            <p>Phone: +123 456 789</p>
+        <div class="footer-section community">
+            <h3>Community</h3>
+            <ul>
+                <li><a href="#">Answer Center</a></li>
+                <li><a href="#">Discussion Boards</a></li>
+                <li><a href="#">Groups</a></li>
+                <li><a href="#">News</a></li>
+            </ul>
         </div>
         <div class="footer-section quick-links">
             <h3>Quick Links</h3>
