--- a/product.html
+++ b/product.html
@@ -45,11 +45,14 @@
         <div class="footer-overlay"></div>
         <div class="footer-content">
         <div class="footer-sections-container">
-            <div class="footer-section contact-info">
-            <h3>Contact Us</h3>
-            <p>123 Main Street, City, Country</p>
-            <p>Email: info@example.com</p>
-            <p>Phone: +123 456 789</p>
+        <div class="footer-section community">
+            <h3>Community</h3>
+            <ul>
+                <li><a href="#">Answer Center</a></li>
+                <li><a href="#">Discussion Boards</a></li>
+                <li><a href="#">Groups</a></li>
+                <li><a href="#">News</a></li>
+            </ul>
         </div>
         <div class="footer-section quick-links">
             <h3>Quick Links</h3>
