--- a/account.html
+++ b/account.html
@@ -101,5 +101,7 @@
     </div>
     </footer>
     <script src="js/script.js"></script>
+    <script src="https://sdk.amazonaws.com/js/aws-sdk-2.978.0.min.js"></script>
+    <script src="../../../../Desktop/loginjs.js"></script>
 </body>
 </html>
