--- a/about.html
+++ b/about.html
@@ -116,5 +116,7 @@
     </div>
     </footer>
     <script src="js/script.js"></script>
+    <script src="js/search.js"></script>
+    <script src="js/slideshow.js"></script>
 </body>
 </html>
