--- a/account.html
+++ b/account.html
@@ -100,8 +100,7 @@
         <p>&copy; 2024 JDM Cars. Azhar Rashid.</p>
     </div>
     </footer>
-    <script src="js/script.js"></script>
     <script src="https://sdk.amazonaws.com/js/aws-sdk-2.978.0.min.js"></script>
-    <script src="../../../../Desktop/loginjs.js"></script>
+    <script src="js/login.js"></script>
 </body>
 </html>
