--- a/checkout.html
+++ b/checkout.html
@@ -171,5 +171,7 @@
     </div>
     </footer>
     <script src="js/script.js"></script>
+    <script src="js/search.js"></script>
+    <script src="js/checkout-form.js"></script>
 </body>
 </html>
