--- a/contact.html
+++ b/contact.html
@@ -123,5 +123,7 @@
     </div>
     </footer>
     <script src="js/script.js"></script>
+    <script src="js/search.js"></script>
+    <script src="js/contact-form.js"></script>
 </body>
 </html>
