--- a/checkout.html
+++ b/checkout.html
@@ -65,20 +65,20 @@
                     <label for="name">Full Name *</label>
                     <input placeholder="Full Name" type="text" id="name" name="name" required>
                     <label for="email">Email *</label>
-                    <input placeholder="Eg. example@mail.com" type="email" id="email" name="email" required>
+                    <input placeholder="example@mail.com" type="email" id="email" name="email" required>
                     <label for="phone">Mobile Number *</label>
-                    <input placeholder="Eg. +1 800 000000" type="text" id="number" name="number" required>
+                    <input placeholder="+44 0000000000" type="text" id="number" name="number" required>
                </div>
                 <div class="card-details">
                     <h2>Card Details</h2>
                     <label for="card-name">Name on Card *</label>
-                    <input placeholder="Eg. Mr. John Doe" type="text" id="card-name" name="card-name" required>
+                    <input placeholder="Mr. John Doe" type="text" id="card-name" name="card-name" required>
                     <label for="card-number">Card Number * 
                         <i class="fab fa-cc-visa fa-lg"></i>
                         <i class="fab fa-cc-mastercard fa-lg"></i>
                         <i class="fab fa-cc-amex fa-lg"></i>
                     </label>
-                    <input placeholder="0000 0000 0000" type="text" id="card-number" name="card-number" required>
+                    <input placeholder="0000 0000 0000 0000" type="text" id="card-number" name="card-number" required>
                     <div class="cvv-expiry">
                         <div class="input-row">
                             <label for="expiry-date">Expiry Date *</label>
@@ -100,7 +100,7 @@
                 <label for="city">Town / City *</label>
                 <input placeholder="City" type="text" id="city" name="city" required>
                 <label for="postcode">Postcode / ZIP *</label>
-                <input placeholder="AAA BBB" type="text" id="postcode" name="postcode" required>
+                <input placeholder="AAA AAA" type="text" id="postcode" name="postcode" required>
             </div>
                 <div class="checkout-buttons">
                     <button type="submit">Complete Purchase</button>
