--- a/home.html
+++ b/home.html
@@ -33,9 +33,10 @@
         <div class="fade-animation">
         <section class="intro">
             <div class="intro-content">
-                <h2>Exciting New Arrivals Await!</h2>
+                <h2>Explore our wide range of cars!</h2>
                 <p>Get ready to be amazed by our upcoming products. Stay tuned for the latest updates and exclusive previews.</p>
-                <a href="#" class="btn">Explore Now</a>
+                <a href="cars.html" class="cars-button">Explore Now</a>
+                
             </div>
         </section>
         <section class="coming-soon">
@@ -47,12 +48,11 @@
 
         <div class="slideshow-container">
             <div class="image-container" id="slideshow1">
-                <img src="images/SupraMK5.jpg" alt="Toyota GR Supra GT4 '100 Edition' ">
-                <img src="images/Eclipse.jpg" alt="Mitsubishi Eclipse GS">
-                <img src="images/garage3.jpg" alt="Garage3">
-                <img src="images/garage4.jpg" alt="Garage4">
-                <img src="images/garage5.jpg" alt="Garage5">
-                <img src="images/garage6.jpg" alt="Garage6">
+                <img src="images/SupraMK5.jpg" alt="Toyota GR Supra GT4 [100 Edition] ">
+                <img src="images/R32.jpg" alt="Nissan Skyline GT-R [Nismo Edition] (R32)">
+                <img src="images/Eclipse.jpg" alt="Mitsubishi Eclipse GS [Fast & Furious Edition]">
+                <img src="images/NSX new.jpg" alt="Honda NSX NC1">
+                <img src="images/Impreza.webp" alt="Subaru Impreza 22B STI">
             </div>
             <div class="textbox" id="textbox1"></div>
             <a class="prev" onclick="plusSlides(-1, 'slideshow1')">&#10094;</a>
@@ -65,13 +65,14 @@
                 <h2>Why Choose Us?</h2>
                 <h3>Fast Shipping</h3>
                 <p>With our express shipping options, you'll receive your order in no time.</p>
-            </div>
-            <div class="feature">
                 <h3>24/7 Customer Support</h3>
                 <p>Our dedicated support team is available around the clock to assist you with any queries or concerns.</p>
             </div>
-            <div class="feature">
-                <h3>Still not convinced?</h3>
+        </section>
+
+        <section class="reviews">
+            <div class="review-content">
+                <h2>Still not convinced?</h2>
                 <p>Check out our reviews</p>
             </div>
         </section>
