--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <p>Discover the finest selection of Japanese Domestic Market (JDM) cars. From iconic classics to modern marvels, we've got it all.</p>
             </div>
             <div class="home-button">
-            <a href="cars.html" class="btn">Explore Cars</a>
+            <a href="home.html" class="btn">?</a>
             </div>
         </div>
     </div>
