--- a/product.html
+++ b/product.html
@@ -36,7 +36,7 @@
             </div>
             <div class="product-info">
             <h1 id="product-name"></h1>
-            <p id="product-mileage"></p>
+            <p id="product-stats"></p>
             <p id="product-description"></p>
             </div>
         </div>
